src/server/actix_server/snapshots/viguno__server__actix_server__hpo_omims__test__hpo_omims_name_contains_with_genes.snap
---
source: src/server/actix_server/hpo_omims.rs
expression: "&run_query(\"/hpo/omims?name=tel-Manzke+syndro&match=contains&genes=true\").await?"
---
- omim_id: "OMIM:616145"
  name: Catel-Manzke syndrome

