src/server/actix_server/snapshots/viguno__server__actix_server__hpo_omims__test__hpo_omims_name_prefix_no_genes.snap
---
source: src/server/actix_server/hpo_omims.rs
expression: "&run_query(\"/hpo/omims?name=Catel-Manzke+syndro&match=prefix\").await?"
---
- omim_id: "OMIM:616145"
  name: Catel-Manzke syndrome

