src/server/actix_server/snapshots/viguno__server__actix_server__hpo_omims__test__hpo_omims_name_suffix_no_hpo_terms.snap
---
source: src/server/actix_server/hpo_omims.rs
expression: "&run_query(\"/hpo/omims?name=tel-Manzke+syndrome&match=suffix\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.0.0
query:
  omim_id: ~
  name: tel-Manzke syndrome
  match_: suffix
  max_results: 100
  hpo_terms: false
result:
  - omim_id: "OMIM:616145"
    name: Catel-Manzke syndrome

