src/server/actix_server/snapshots/viguno__server__actix_server__hpo_omims__test__hpo_omims_omim_id_exact_no_hpo_terms.snap
---
source: src/server/actix_server/hpo_omims.rs
expression: "&run_query(\"/hpo/omims?omim_id=616145\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.1.0
query:
  omim_id: "616145"
  name: ~
  match_: ~
  max_results: 100
  hpo_terms: false
result:
  - omim_id: "OMIM:616145"
    name: Catel-Manzke syndrome

